# pydantic_ai_learn

./: .gitignore  langgraph_emotion.py  langgraph_main.py  main.py  pydantic_test.py  pyproject.toml
chroma_langchain_db/: chroma.sqlite3
chrome_langchain_db/: chroma.sqlite3
